fix width problem on mobile device

--- a/src/components/LantingEditor/Toolbar/style.scss
+++ b/src/components/LantingEditor/Toolbar/style.scss
@@ -1,5 +1,6 @@
 .lanting-editor-toolbar {
   display: flex;
+  flex-wrap: wrap;
 
   .lanting-button {
     margin-right: 2px;
